# sf-bulk-loader

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DECISIONS.md  LICENSE  PARALLEL_AGENTS.md  README.md  SECURITY.md  docker-compose.ci.yml  docker-compose.ghcr.yml  docker-compose.https.yml  docker-compose.postgres.yml  docker-compose.yml  frontend-claude-runbook.md  frontend_api_audit.md  generate_pdf.py  requirements-pdf.txt  runs.html  salesforce-bulk-loader-spec.md
backend/: .dockerignore  Dockerfile  alembic.ini  app.db  pyproject.toml  requirements-desktop.txt  requirements.txt  server.py  sf_bulk_loader.spec  test_orchestrator.db  test_retry_run.db
backend/alembic/: env.py
backend/app/: config.py  database.py  main.py
backend/tests/: conftest.py  test_about.py  test_account_locked_email.py  test_admin_email.py  test_admin_reset_2fa.py  test_admin_users_api.py  test_auth.py  test_auth_2fa_enrollment.py  test_auth_2fa_login.py  test_auth_lockout.py  test_auth_login.py  test_auth_me.py  test_auth_password_watermark.py  test_bulk_query_executor.py  test_cli.py  test_config.py  test_config_email.py  test_connections.py  test_csv_processor.py  test_email_cardinality.py  test_email_change.py  test_email_config_migration.py  test_error_monitoring.py  test_events_taxonomy.py  test_execute_retry_run.py  test_fk_cascades.py  test_input_connections.py  test_input_storage.py  test_invitation_accept.py  test_invitation_email.py  test_invitation_token_model.py  test_jobs.py  test_load_plans.py  test_load_runs.py  test_load_steps.py  test_load_steps_preview_edge_cases.py  (+37 more)
(+448 files in other folders)
